# spinning-rust-chiller

./: .gitignore  Cargo.toml  flake.nix
src/: cli.rs  lib.rs  main.rs
src/config/: mod.rs  validation.rs
src/fan/: control.rs  mod.rs
src/temperature/: mod.rs  monitor.rs
tests/: integration_tests.rs
