[package]
name = "spinning-rust-chiller"
version = "0.1.0"
edition = "2021"
authors = ["Yannick"]
description = "HDD temperature-based fan control"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
structopt = "0.3"
toml = "0.7"
libc = "0.2"
